# monte-carlo-real-estate-demo

./: .dockerignore  .env.example  .gitignore  COMPANY_DEMO_HANDOFF.md  Dockerfile  LICENSE  README.md  README_UI_LAUNCH.md  UI.py  ai_analyst.py  ai_context.py  api_app.py  button_audit.py  conftest.py  demo_presets.py  engine_output_contract.py  export_contracts.py  metrics_registry.py  metrics_schema.py  metrics_utils.py  monte_carlo_model.py  number_sanity.py  odoo_config.py  odoo_connector_contract.py  odoo_handoff_mapper.py  odoo_handoff_payload.py  odoo_json2_client.py  odoo_model_discovery.py  odoo_sandbox_workflows.py  pyproject.toml  requirements.txt  requirements_audit.txt  requirements_testing.txt  risk_flags.py  rmc_model.py  run.sh  run_registry.py  run_tests.py  run_ui.py  run_ui.sh  (+9 more)
.github/: dependabot.yml
.github/workflows/: full-audit.yml  public-gates.yml
.streamlit/: config.toml
artifacts/: logic_report.json  wiring_report.json
artifacts/integration_demo/: sample_business_summary.json
artifacts/odoo_handoff_demo/: sample_odoo_handoff_payload.json
demo_presets/: base.json  conservative.json  debt-stress.json  downside.json  lease-up-risk.json  upside.json
docs/: AI_ERP_EXTENSION_ROADMAP.md  AUDIT_SYSTEM.md  DEMO_ASSUMPTION_BOUNDARY.md  DEMO_SCRIPT.md  GBC_WORKING_SYSTEM.md  KEEWAYS_AI_ERP_EXTENSION_ROADMAP.md  KEEWAYS_DEMO_SCRIPT.md  KEEWAYS_POSITIONING_MEMO.md  KEEWAYS_SAFE_CLAIMS.md  LOCAL_CONTAINER_RUN.md  ODOO_CONNECTOR_BUILD_PLAN.md  ODOO_INTEGRATION_RESEARCH.md  POSITIONING_MEMO.md  SAFE_CLAIMS.md  SCREENSHOT_EVIDENCE.md  WORKFLOW_PRODUCT_ROADMAP.md  metric_inputs_map.md  metrics_contract.md
docs/adr/: 0001_domain_invariants.md
schemas/export_contracts/: ai_context.schema.json  business_summary.schema.json  odoo_handoff_payload.schema.json  risk_flags.schema.json  scenario_matrix.schema.json
scripts/: audit_gates.py  export_demo_business_summary.py  export_odoo_handoff_demo.py  generate_demo_bundle.py  number_audit.py  odoo_handoff_dry_run.py  odoo_sandbox_probe.py  odoo_sandbox_sync.py  ui_control_audit.py
tests/: __init__.py  conftest.py  test_ai_analyst.py  test_ai_context.py  test_api_app.py  test_button_audit.py  test_coc_sensitivity.py  test_container_docs.py  test_core_model.py  test_debt_yield_sensitivity.py  test_demo_adaptation_workflow.py  test_demo_return_reasonableness.py  test_docs_truth.py  test_dscr_wiring.py  test_engine_output_contract.py  test_integration_payload_contract.py  test_keeways_docs_truth.py  test_leasing_sensitivity.py  test_metrics_full.py  test_metrics_spec.py  test_number_audit.py  test_number_sanity.py  test_odoo_config.py  test_odoo_connector_contract.py  test_odoo_handoff_mapper.py  test_odoo_handoff_payload.py  test_odoo_json2_client.py  test_odoo_model_discovery.py  test_odoo_sandbox_workflows.py  test_public_claim_boundaries.py  test_public_workflow_contract.py  test_refi_cashflow_periodicity.py  test_reviewer_access_docs.py  test_run_registry.py  test_scenario_randomizer.py  test_sensitivity.py  test_streamlit_apptest.py  test_tornado_sensitivity.py  test_ui_branch_activation.py  test_ui_command_surfaces.py  (+9 more)
tests/audit/: BROAD_FAILURE_INVENTORY.md  test_acceptance_base.py  test_acceptance_mini.py  test_audit_api_smoke.py  test_directional_sensitivities.py  test_dscr_debt_yield_contract_audit.py  test_explain_p50.py  test_financial_metric_sensitivity_contract_v1.py  test_outliers_health.py  test_robustness_json.py  test_stochastic_stats_corr.py  test_trace_payload_contract.py  test_ui_metrics_coverage.py
tests/fixtures/: ui_control_classification.json  ui_numeric_cases.json  ui_option_matrix.json
tests/integration/: test_odoo_sandbox_json2.py
tests/invariants/: test_logic.py  test_sensitivity.py
tests/metrics/: test_irr_stats.py  test_return_value_metrics.py
tests/property/: test_metrics_properties.py
tests/ui/: test_streamlit_apptest_controls.py
