[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monte-carlo-real-estate"
version = "1.0.0"
description = "Monte Carlo Real Estate Investment Model"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "numpy-financial>=1.0.0",
    "streamlit>=1.28.0",
    "altair>=5.0.0",
    "plotly>=5.17.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.2.0",
    "psutil>=5.9.0",
    "hypothesis>=6.88.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "mutmut>=2.4.3",
    "pre-commit>=3.5.0",
    "types-requests",
    "pandas-stubs",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by line-length)
    "PLR2004", # magic values - too noisy for metrics code
    "E712",   # avoid equality comparisons to True - acceptable in data processing
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]  # Allow magic values in tests
"scripts/*" = ["T201"]  # Allow print statements in scripts

[tool.ruff.lint.isort]
known-first-party = ["ui_metrics", "rmc_model", "metrics_registry", "seed_registry"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
plugins = ["pandas_stubs"]

# Typing for metrics_schema only
[[tool.mypy.overrides]]
module = ["metrics_schema"]
disallow_untyped_defs = true
disallow_any_expr = false
warn_return_any = false

# More lenient for ui_metrics due to pandas complexity
[[tool.mypy.overrides]]
module = ["ui_metrics"]
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=ui_metrics",
    "--cov=metrics_registry", 
    "--cov-report=term-missing",
    "--cov-report=html:test_reports/coverage",
    "--cov-report=xml:test_reports/coverage.xml",
    "--html=test_reports/report.html",
    "--self-contained-html",
    "--junit-xml=test_reports/junit.xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "property: Hypothesis property-based tests",
    "invariant: Invariant tests for mathematical properties",
    "sensitivity: Input sensitivity tests",
    "slow: Slow-running tests",
    "integration: Integration tests",
    "unit: Unit tests",
    "performance: Performance tests",
    "ui: UI-focused tests",
    "model: Model-focused tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["ui_metrics", "metrics_registry", "seed_registry"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mutmut]
paths_to_mutate = "ui_metrics.py,metrics_registry.py"
backup = false
runner = "python -m pytest tests/metrics/ tests/invariants/ -x"
tests_dir = "tests/"
